--- a/test-catalog/users/jerolimov.yaml
+++ b/test-catalog/users/jerolimov.yaml
@@ -1,9 +1,9 @@
 apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
-  name: cjerolim
+  name: jerolimov
   title: Christoph Jerolimov # shown in the table
 spec:
   profile:
-    displayName: Christoph Jerolimov (SSO) # shown on the detail page
+    displayName: Christoph Jerolimov (GitHub) # shown on the detail page
   memberOf: [janus-authors]
