--- a/test-catalog/components/christoph-demo1-service.yaml
+++ b/test-catalog/components/christoph-demo1-service.yaml
@@ -16,7 +16,7 @@ metadata:
     backstage.io/techdocs-ref: url:https://github.com/jerolimov/janus/tree/main/techdocs/christoph-demo
     github.com/project-slug: jerolimov/janus
     backstage.io/kubernetes-id: christoph-demo1-service
-    backstage.io/kubernetes-namespace: christoph-backstage-test
+    backstage.io/kubernetes-namespace: christoph
     janus-idp.io/tekton: my-backstage
   tags:
     - christoph-demo
