add rhdh-qe user

--- a/test-catalog/all.yaml
+++ b/test-catalog/all.yaml
@@ -8,6 +8,7 @@ spec:
     - ./users/christoph-jerolimov.yaml
     - ./users/cjerolim.yaml
     - ./users/jerolimov.yaml
+    - ./users/rhdh-qe.yaml
     - ./systems/christoph-demo-system.yaml
     - ./components/backstage-showcase.yaml
     - ./components/christoph-demo1-service.yaml
