--- a/test-catalog/users/christoph-jerolimov.yaml
+++ b/test-catalog/users/christoph-jerolimov.yaml
@@ -2,7 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
   name: christoph-jerolimov
-  title: Christoph Jerolimov # shown in the table
+  title: Christoph Jerolimov (GitHub) # shown in the table
 spec:
   profile:
     displayName: Christoph Jerolimov (GitHub) # shown on the detail page
