--- a/test-catalog/users/ShiranHi.yaml
+++ b/test-catalog/users/ShiranHi.yaml
@@ -6,4 +6,5 @@ metadata:
 spec:
   profile:
     displayName: Shiran Hirshberg (GitHub) # shown on the detail page
+    picture: https://avatars.githubusercontent.com/u/77277517?v=4
   memberOf: [janus-authors]
