--- a/test-catalog/users/ciiay.yaml
+++ b/test-catalog/users/ciiay.yaml
@@ -6,4 +6,5 @@ metadata:
 spec:
   profile:
     displayName: Yi Cai (GitHub) # shown on the detail page
+    picture: https://avatars.githubusercontent.com/u/26255262?v=4
   memberOf: [janus-authors]
