--- a/test-catalog/users/cjerolim.yaml
+++ b/test-catalog/users/cjerolim.yaml
@@ -6,4 +6,5 @@ metadata:
 spec:
   profile:
     displayName: Christoph Jerolimov (SSO) # shown on the detail page
+    picture: https://avatars.githubusercontent.com/u/139310?v=4
   memberOf: [janus-authors]
