--- a/test-catalog/users/debsmita1.yaml
+++ b/test-catalog/users/debsmita1.yaml
@@ -6,4 +6,5 @@ metadata:
 spec:
   profile:
     displayName: Debsmita Santra (GitHub) # shown on the detail page
+    picture: https://avatars.githubusercontent.com/u/22490998?v=4
   memberOf: [janus-authors]
