--- a/test-catalog/users/invincibleJai.yaml
+++ b/test-catalog/users/invincibleJai.yaml
@@ -6,4 +6,5 @@ metadata:
 spec:
   profile:
     displayName: Jaivardhan Kumar (GitHub) # shown on the detail page
+    picture: https://avatars.githubusercontent.com/u/5129024?v=4
   memberOf: [janus-authors]
