--- a/test-catalog/users/its-mitesh-kumar.yaml
+++ b/test-catalog/users/its-mitesh-kumar.yaml
@@ -6,4 +6,5 @@ metadata:
 spec:
   profile:
     displayName: Mitesh Kumar (GitHub) # shown on the detail page
+    picture: https://avatars.githubusercontent.com/u/173649196?v=4
   memberOf: [janus-authors]
