--- a/test-catalog/users/teknaS47.yaml
+++ b/test-catalog/users/teknaS47.yaml
@@ -6,4 +6,5 @@ metadata:
 spec:
   profile:
     displayName: Sanket Saikia (GitHub) # shown on the detail page
+    picture: https://avatars.githubusercontent.com/u/29019164?v=4
   memberOf: [janus-authors]
