--- a/test-catalog/all.yaml
+++ b/test-catalog/all.yaml
@@ -12,6 +12,7 @@ spec:
     - ./users/divyanshiGupta.yaml
     - ./users/invincibleJai.yaml
     - ./users/its-mitesh-kumar.yaml
+    - ./users/Lucifergene.yaml
     - ./users/rhdh-qe.yaml
     - ./users/ShiranHi.yaml
     - ./users/teknaS47.yaml
