--- a/test-catalog/all.yaml
+++ b/test-catalog/all.yaml
@@ -5,7 +5,10 @@ metadata:
 spec:
   targets:
     - ./groups/janus-authors.yaml
+    - ./users/AndrienkoAleksandr.yaml
+    - ./users/benwilcock.yaml
     - ./users/christoph-jerolimov.yaml
+    - ./users/christophe-f.yaml
     - ./users/ciiay.yaml
     - ./users/cjerolim.yaml
     - ./users/debsmita1.yaml
